# whitehall

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  PHASE2-WIP.md  README-TESTING.md  README.md  REFACTORING-COMPLETE.md  test-examples.sh
.beads/: config.yaml  issues.jsonl  whitehall-971.md
.github/workflows/: release.yml
apps/hello/: whitehall.toml
apps/picsum/: .gitignore  whitehall.toml
docs/: ANALYSIS-examples.md  ARCHITECTURE.md  ARRAY-LITERALS.md  BUG-viewmodel-main-wh.md  BUILD.md  CODE-SEMANTICS.md  FFI.md  FIX-PASSTHRU.md  GAPS.md  IMPLEMENTATION-READY.md  LANGUAGE-REFERENCE.md  NEXTSTEPS-EXAMPLE-APPS.md  NEXTSTEPS.md  PASSTHRU.md  PHASE2-COMPLETE.md  PLAN-EXAMPLES-APPS.md  PRESENTATION.md  PROGRESS.md  QOL.md  REF-BUILD-SYSTEM.md  REF-OVERVIEW.md  REF-STATE-MANAGEMENT.md  REF-TODO-REVIEW.md  REF-TOOLCHAIN.md  REF-TRANSPILER.md  REF-WEB-PLAYGROUND.md  REFACTOR-PROGRESS.md  ROADMAP.md  SINGLE-FILE-MODE.md  STATE-MANAGEMENT.md  STORE-ARCHITECTURE.md  STORE-CODE-REFERENCE.md  STORE-EXPLORATION-INDEX.md  STORE.md  SUSPEND-FUNCTIONS.md  TEST_FORMAT_PROPOSAL.md  TOOLCHAIN.md  TRANSPILER.md  VIEW-BACKEND.md  VISION.md  (+1 more)
docs/syntax/: 01-component-definition.md  02-ui-view-dsl.md  03-routing.md  CATEGORIES.md  PENDING.md
examples/: README.md  TEST-APPS.md  TOOLCHAIN-TESTING.md  calculator.wh  colors.wh  counter.wh  hello-world.wh  login-form.wh  notes.wh  shopping-list.wh  test-toolchain.rs  theme-picker.wh
examples-complete/: README.md
scripts/: build-example-apps.sh  start-playground.sh  test-examples.sh
src/: android_scaffold.rs  build_pipeline.rs  config.rs  ffi_build.rs  keyboard.rs  lib.rs  main.rs  project.rs  routes.rs  single_file.rs
templates/: .gitignore  Whitehall.toml  whitehall.toml
tests/: ffi_integration_test.rs  init_tests.rs  optimization_examples_test.rs  passthru_examples_test.rs  single_file_test.rs  test_toolchain_integration.rs  transpile_test.rs  transpiler_examples_test.rs
whitehall-ffi-macro/: Cargo.toml
(+331 files in other folders)
