[package]
name = "whitehall"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Jose"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
notify = "6.1"
dirs = "5.0"
sha2 = "0.10"
colored = "2.1"
# Phase 2: Downloader dependencies
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
indicatif = "0.17"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
regex = "1.12.2"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
similar = { version = "2.6", features = ["inline"] }
