[package]
name = "whitehall"
version = "0.0.3"
edition = "2021"
authors = ["Jeff Jose"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
walkdir = "2.5"
notify = "8.2"
ignore = "0.4"
dirs = "6.0"
sha2 = "0.10"
colored = "3.0"
# Phase 2: Downloader dependencies
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
indicatif = "0.18"
tar = "0.4"
flate2 = "1.0"
zip = "6.0"
regex = "1.12"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
ctrlc = "3.5.1"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.1"
similar = { version = "2.6", features = ["inline"] }
